<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/proof"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="108dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="382dp"
        android:layout_height="531dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/proof_button"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextApellidos"
                android:layout_width="318dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:textColor="@color/proof"
                android:textColorHint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="318dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/proof"
                android:textColorHint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNick" />

            <EditText
                android:id="@+id/editTextNick"
                android:layout_width="318dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="@color/proof"
                android:textColorHint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="318dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextApellidos" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="318dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <EditText
                android:id="@+id/editTextAge"
                android:layout_width="318dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="47dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextApellidos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextApellidos"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_man" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="47dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNick"
                app:layout_constraintEnd_toStartOf="@+id/editTextNick"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextNick"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_man" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="47dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNombre"
                app:layout_constraintEnd_toStartOf="@+id/editTextNombre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextNombre"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_man" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="47dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextEmail"
                app:layout_constraintEnd_toStartOf="@+id/editTextApellidos"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/editTextEmail"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_email" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
                app:layout_constraintEnd_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toTopOf="@+id/editTextPassword"
                app:srcCompat="@drawable/ic_lock" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
                app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/editTextPassword"
                app:srcCompat="@drawable/ic_lock" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextAge"
                app:layout_constraintEnd_toStartOf="@+id/editTextAge"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/editTextAge"
                app:srcCompat="@drawable/ic_age_limit" />

            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="70dp"
                android:layout_height="66dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.262"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAge"
                app:srcCompat="@drawable/ic_launcher_background" />

            <Button
                android:id="@+id/buttonPhoto"
                android:layout_width="86dp"
                android:layout_height="39dp"
                android:layout_marginStart="40dp"
                android:backgroundTint="#3C3F41"
                android:text="@string/upload"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewAvatar"
                app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
                app:layout_constraintTop_toTopOf="@+id/imageViewAvatar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>